--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-aria": "^1.7.8",
     "angular-material": "^1.1.20",
     "angular-messages": "^1.7.8",
+    "angular-route": "^1.7.8",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "http-server": "^0.11.1",
