--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "http-server": "^0.11.1",
+    "inline-source-map": "^0.6.2",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
     "popper.js": "^1.15.0",
@@ -39,6 +40,7 @@
     "install": "^0.13.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
+    "source-map": "^0.7.3",
     "style-loader": "^1.0.0",
     "url-loader": "^2.1.0",
     "webpack": "^4.40.2",
