--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "angular-material": "^1.1.20",
     "angular-messages": "^1.7.8",
     "angular-route": "^1.7.8",
+    "autoprefixer": "^9.6.5",
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
     "http-server": "^0.11.1",
@@ -25,6 +26,7 @@
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "^0.8.0",
     "popper.js": "^1.15.0",
+    "postcss-cli": "^6.1.3",
     "tailwindcss": "^1.1.2"
   },
   "devDependencies": {
