--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -1,7 +1,5 @@
 {
     "short_name": "Aktivist",
     "name": "Aktivist",
-    "display": "standalone",
-    "scope": "/maps/",
-    "theme_color": "#3367D6"
+    "display": "standalone"
   }
