--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -1,5 +1,6 @@
 {
     "short_name": "Aktivist",
     "name": "Aktivist",
-    "display": "standalone"
+    "display": "standalone",
+    "start_url": "/#!"
   }
