--- a/app/src/manifest.json
+++ b/app/src/manifest.json
@@ -2,5 +2,5 @@
     "short_name": "Aktivist",
     "name": "Aktivist",
     "display": "standalone",
-    "start_url": "http://aktivist2.herokuapp.com/#!"
+    "start_url": "http://aktivist2.herokuapp.com/"
   }
