--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular": "^1.7.8",
     "angular-animate": "^1.7.8",
     "angular-aria": "^1.7.8",
+    "angular-filter": "^0.5.17",
     "angular-material": "^1.1.20",
     "angular-messages": "^1.7.8",
     "angular-route": "^1.7.8",
