--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "angular": "^1.7.8",
+    "angular": ">=1.7.9",
     "angular-animate": "^1.7.8",
     "angular-aria": "^1.7.8",
     "angular-filter": "^0.5.17",
