--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "inline-source-map": "^0.6.2",
     "mini-css-extract-plugin": "^0.8.0",
     "moment": "^2.24.0",
+    "ng-clipboard": "^1.0.2",
     "pg": "^7.12.1",
     "popper.js": "^1.15.0",
     "postcss-cli": "^6.1.3",
@@ -34,7 +35,7 @@
     "@babel/core": "^7.6.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.2.0",
     "extract-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
@@ -44,7 +45,7 @@
     "image-webpack-loader": "^6.0.0",
     "img-loader": "^3.0.1",
     "install": "^0.13.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.1",
     "sass-loader": "^8.0.0",
     "source-map": "^0.7.3",
     "style-loader": "^1.0.0",
